serching by input => js finished

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section class="searchProducts">
             <div class="menu"> <img src="imgs/menu.png" alt="menu"></div> 
     
-            <form action="">
+            <form action="" id="searchBrand">
                 <input type="text" id="search" name="search" placeholder="Buscar...">
                 <label for="search">🔍</label>
             </form>
