shopping cart js and Local Storage for adding products

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="sectionCart displayCenter hide">
         <div class="divCart">
             <img id="close" src="imgs/close.png" alt="cerrar">
-            <article>
+            <!-- <article class = "cartArticle">
                 <div  class="displayCenter">
                     <div class="description displayCenter">
                         <img src="imgs/oreiro1.webp" alt="">
@@ -29,17 +29,20 @@
                     <p>10.000</p>
                 </div>
                 <button>Eliminar</button>
-            </article> 
-            <article class="displayCenter">
+            </article>  -->
+            <article id="deliver" class="displayCenter">
                 <p>Envío</p>
-                <p>444444</p>
+                <p>$0</p>
             </article>
             <article class="displayCenter">
                 <p>Total con envío</p>
-                <p>444444</p>
+                <p>$0</p>
             </article>
-            <button>Pagar</button>
-            <button>Continuar Comprando</button>
+            <div class="cartButtons displayCenter">
+                <button>Pagar</button>
+                <button>Continuar Comprando</button>
+                <button>Borrar todo</button>
+            </div>
         </div>
     </section>
     <main>
@@ -107,7 +110,7 @@
             </div>
         </section>
     </main>
-    
+
     
     <script src="js/products.js"></script>
     <script src="js/main.js"></script>
