--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
             </article>  -->
             <article id="deliver" class="displayCenter">
                 <p>Envío</p>
-                <p>$0</p>
+                <p id="deliverPrice">$1.000</p>
             </article>
             <article class="displayCenter">
                 <p>Total con envío</p>
-                <p>$0</p>
+                <p id="finalPrice">$0</p>
             </article>
             <div class="cartButtons displayCenter">
                 <button>Pagar</button>
