structure an js finished

--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
             </article>  -->
             <article id="deliver" class="displayCenter">
                 <p>Envío</p>
-                <p id="deliverPrice">$1.000</p>
+                <p>$<span id="deliverPrice">0</span> </p>
             </article>
             <article class="displayCenter">
                 <p>Total con envío</p>
-                <p id="finalPrice">$0</p>
+                <p>$<span id="finalPrice">0</span></p>
             </article>
             <div class="cartButtons displayCenter">
-                <button>Pagar</button>
-                <button>Continuar Comprando</button>
-                <button>Borrar todo</button>
+                <button id="pay">Pagar</button>
+                <button id="backToProducts">Continuar Comprando</button>
+                <button id="deleteCart">Borrar todo</button>
             </div>
         </div>
     </section>
